crates/jarl/tests/integration/snapshots/integration__assignment__assignment_wrong_value_from_toml_deprecated.snap
---
source: crates/jarl/tests/integration/assignment.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select\").arg(\"assignment\").run().normalize_os_executable_name().normalize_temp_paths()"
---

success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Invalid configuration in [TEMP_DIR]/jarl.toml:
Invalid value for `operator` in `[lint.assignment]`: "foo". Expected "<-" or "=".

----- args -----
check . --select assignment
